# StrokeSegApp

./: .gitmodules  CMakeLists.txt  Description.md  Readme.md  Welcome.md  populateData.cmake  setup_env.cmake
cmake/: DownloadFile.cmake  StrokeSegCore_patcher.cmake
cmake/package/: Packaging.cmake  WindowsPackaging.cmake
resources/: BootStrapper.rc  resource.h
